Fix dark mode job definition labels

--- a/rundeckapp/grails-spa/packages/ui-trellis/theme/scss/custom/jobs.scss
+++ b/rundeckapp/grails-spa/packages/ui-trellis/theme/scss/custom/jobs.scss
@@ -22,9 +22,9 @@
   td.displabel {
     text-align: right;
     vertical-align: top;
+    font-weight: 700;
 
     text-transform: uppercase;
-    color: var(--dark-gray);
     width: 200px;
   }
 }
